# openvino

./: PYTORCH_TESTS.md  PYTORCH_TESTS_SUMMARY.md  run_pytorch_layer_tests.sh  run_pytorch_tests.py
.github/workflows/: job_cxx_unit_tests.yml  job_python_unit_tests.yml  job_pytorch_models_tests.yml
cmake/: features.cmake
cmake/developer_package/clang_format/: clang_format.cmake
docs/: ggml_frontend_implementation_plan.md  ggml_frontend_proposal.md  gguf_frontend_implementation_plan.md  gguf_frontend_proposal.md
inference-engine/samples/benchmark_app/: main.cpp
inference-engine/src/inference_engine/: ie_network_reader.cpp
inference-engine/src/legacy_api/src/: convert_function_to_cnn_network.cpp  ie_cnn_layer_builder_ngraph.cpp
inference-engine/src/mkldnn_plugin/: CMakeLists.txt  mkldnn_graph.cpp  mkldnn_graph_optimizer.cpp  mkldnn_graph_optimizer.h  mkldnn_node.cpp
inference-engine/src/mkldnn_plugin/nodes/: embedding_bag_sum.cpp  mkldnn_interpolate_node.cpp  mkldnn_interpolate_node.h
inference-engine/tests/functional/inference_engine/: CMakeLists.txt
model-optimizer/automation/: package_BOM.txt
model-optimizer/extensions/front/onnx/: ONNXResizeToInterpolate.py  resize_ext.py
model-optimizer/extensions/ops/: interpolate.py
model-optimizer/mo/: main.py
model-optimizer/mo/front/torchscript/: loader.py  (+1 more)
model-optimizer/mo/graph/: graph.py
model-optimizer/mo/utils/: guess_framework.py
ngraph/frontend/: CMakeLists.txt
ngraph/frontend/common/: CMakeLists.txt
ngraph/frontend/common/include/: common_utils.hpp
ngraph/frontend/paddlepaddle/: CMakeLists.txt
ngraph/python/: requirements_test.txt
ngraph/test/: CMakeLists.txt
ngraph/test/frontend/: frontend_manager.cpp
ngraph/test/type_prop/: adaptive_avg_pool.cpp  adaptive_max_pool.cpp
src/bindings/python/src/pyopenvino/frontend/pytorch/: CMakeLists.txt  decoder.cpp  decoder.hpp  py_module.cpp  weights_dispatcher.cpp  weights_dispatcher.hpp
src/frontends/gguf/: .gitignore  README.md
src/frontends/onnx/: CMakeLists.txt
src/frontends/onnx/decoder_proto/: CMakeLists.txt
src/frontends/onnx/decoder_proto/include/openvino/frontend/onnx/: decoder_proto.hpp  graph_iterator_proto.hpp  graph_iterator_util.hpp
src/frontends/onnx/decoder_proto/src/: decoder_proto.cpp  graph_iterator_proto.cpp  graph_iterator_util.cpp  tensor_external_data.cpp
tests/layer_tests/: .gitignore  TEST-pytorch.html  TEST-pytorch.xml  conftest.py
tests/layer_tests/common/: layer_test_class.py  tf_layer_test_class.py
tests/layer_tests/py_frontend_tests/: test_torch_frontend.py
tests/layer_tests/pytorch_tests/: pytorch_layer_test_class.py  test_adaptive_avg_pool.py  test_adaptive_avg_pool3d.py  test_adaptive_max_pool.py  test_adaptive_max_pool_2d.py  test_add.py  test_addcmul.py  test_addmm.py  test_aliases.py  test_all.py  test_and.py  test_arange.py  test_atan2.py  test_batch_norm.py  test_bitwise_ops.py  test_broadcast_tensors.py  test_cat.py  test_ceil.py  test_celu.py  test_chunk.py  test_clamp.py  test_clone.py  test_comparision.py  test_conv_transposend.py  test_convnd.py  test_convolution.py  test_convolution_mode.py  test_cumsum.py  test_distance.py  test_div.py  test_embedding_bag.py  test_exp.py  test_expand.py  test_fake_quantize.py  test_flatten.py  test_floor.py  test_floor_divide.py  test_full.py  test_glu.py  test_grid_sampler.py  (+62 more)
tests/layer_tests/tensorflow_tests/: permutation_utils.py  test_tf_Add.py  test_tf_BatchToSpace.py  test_tf_BiasAdd.py  test_tf_Bucketize.py  test_tf_Concat.py  test_tf_Eltwise.py  test_tf_FakeQuantize.py  test_tf_Gather.py  test_tf_Identity.py  test_tf_LogSoftmax.py  test_tf_Mul.py  test_tf_NormalizeL2.py  test_tf_OneHot.py  test_tf_Pooling.py  test_tf_ReLU6.py  test_tf_Reduce.py  test_tf_Resample_pattern_new.py  test_tf_Roll.py  test_tf_Rsqrt.py  test_tf_Select.py  test_tf_SpaceToBatch.py  test_tf_Squeeze.py  test_tf_StridedSlice.py  test_tf_Sub.py  test_tf_Swish.py  test_tf_TopK.py  test_tf_UnaryOps.py
tests/model_hub_tests/gguf/: README.md  conftest.py  requirements.txt  test_qwen3_vl.py  test_text_decoders.py
tests/model_hub_tests/pytorch/: test_llm.py  timm_models
(+440 files in other folders)
